Tue Mar  8 13:39:25 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/mkconstants.rb: workaround for some of 4.4BSD-Lite
	  derived OSs.

Tue Mar  8 10:48:53 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (rb_exec_recursive): declaration should precede statements
	  before C99. 

Tue Mar  8 10:05:40 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (errno_missing): Errno.const_missing to allow references
	  to SyscallError exceptions not defined on the platform.
	  [ruby-core:04522]

	* error.c (Init_syserr): Errno::NOERROR(0) for fallback exception.

Tue Mar  8 01:19:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: follow nkf 1.66
	  fixed: [ruby-dev:25828]

Mon Mar  7 21:29:40 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/server.rb (WEBrick::GenericServer#start): should 
	  restore @token if accept failure. suggested by Dominique Brezinski.
	  [ruby-core:04518]

	* sample/webrick/httpsd.rb: fix typo in comment. suggested by
	  Kazuhiko Shiozaki.

Mon Mar  7 21:01:37 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_require_safe): get actual path string under safe level
	  when requested.  fixed: [ruby-dev:25815]

Mon Mar  7 16:46:02 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_start_ssl, ossl_ssl_read,
	  ossl_ssl_write): need to set errno on Win32 platform.

Mon Mar  7 14:55:43 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (block_pass): should not push unique number if a block is
	  not an orphan.  [ruby-dev:25808]

Mon Mar  7 14:13:23 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/lib/openssl/buffering.rb (Buffering#initialize):
	  should set @eof and @rbuffer.

Mon Mar  7 10:28:00 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (inspect_obj): unintended space removal.
	  [ruby-dev:25810]

	* eval.c (rb_exec_recursive): should not use NODE in disclosed
	  context.  [ruby-dev:25812]
