@@ -1,3 +1,9 @@
+Tue Mar  8 18:16:55 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/sample/tktextio.rb: New sample script. TkTextIO class in this
+	  sample supports to use a text widget as if it is a I/O stream (such
+	  like as StringIO class).
+
 Tue Mar  8 13:39:25 2005  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/mkconstants.rb: workaround for some of 4.4BSD-Lite
